# image_pattern_extraction

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
configs/: config.toml  config.yaml  logging.json
src/: __init__.py  clustering.py  dataset.py  draw.py  encoder.py  extractor.py  files.py  general_algo.py  model.py  mylogger.py  prompt.py  reducer.py  utils.py
src/ml_utils/: __init__.py  clustering.py  encoder.py  extractor.py  general_algo.py  reducer.py
utils/: __init__.py  clustering.py  draw.py  extractor.py  feature_extract.py  model.py  prompt.py  reducer.py
