[project]
name = "image-pattern-extraction"
version = "0.1.1"
description = "Find the pattern in your images."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kaleido>=1.0.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.2.240807",
    "types-toml>=0.10.8.20240310",
]

